# Alex

./: README.md  alex.crt  hosts  hosts and bashrc config  keypass.txt  signing.pem
Arduino/: arduino.ino  colorsensor.h  constants.h  packet.h
Control/: .control.cpp.swp  Makefile  control.cpp  tls-alex-client.cpp
Control/cert/: signing.key  signing.srl
Control/client_lib/: constants.h
Control/controlkey/: laptop.crt  laptop.csr  laptop.key
Control/tls-client-lib/: tls-alex-client.cpp
Laptop/: Laptop.cpp  Makefile  constants.h
Laptop/cert/: signing.pem
Laptop/controlkey/: laptop.crt
Pi/: Alex.cpp  Makefile  ssss.cpp  tls-alex-server.cpp
Pi/cert/: signing.key  signing.pem  signing.srl
Pi/pikey/: alex.crt  alex.csr  alex.key
Pi/server_lib/: serialize.cpp  serialize.h
Pi/tls-server-lib/: tls-alex-server.cpp
catkin_ws/devel/: local_setup.sh
catkin_ws/install/: .rosinstall
colorsensor/colorsensorcalibrate/: colorsensorcalibrate.ino
colorsensor/sensortest/: sensortest.ino
healp/: keypass.txt
healp/Arduino/: arduino.ino  movement.h
healp/Control/: Makefile  control.cpp
healp/Pi/: Alex.cpp
healp/keys/: keypass.txt
humpDetector/: server.cpp
humpDetector/cliffSensor/: README.md
keys/: alex.csr  laptop.key
retry/Arduino/: Arduino.ino
retry/Laptop/: Laptop.cpp  Makefile
retry/Pi/: Alex.cpp
retry/keys/: alex.crt  alex.key
ros_laptop/devel/: .catkin
ros_pi/: .bashrc
ros_pi/slam/: alex.sh
vl53l0x-linux-master/: CMakeLists.txt
vl53l0x-linux-master/examples/: CMakeLists.txt  continuousMultipleSensors.cpp  humpDetector.cpp
(+160 files in other folders)
